--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "first-app",
   "scripts": {
-    "start": "parcel index.html",
-    "build": "parcel build index.html",
+    "start": "parcel ./index.html",
+    "build": "parcel build ./index.html",
     "test": "jest"
   },
   "author": "vishal",
@@ -12,9 +12,12 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/preset-react": "^7.24.7",
+    "autoprefixer": "^10.4.20",
     "babel-loader": "^9.1.3",
-    "parcel": "^2.12.0",
-    "process": "^0.11.10"
+    "parcel": "^2.10.0",
+    "postcss": "^8.4.41",
+    "process": "^0.11.10",
+    "tailwindcss": "^3.4.10"
   },
   "dependencies": {
     "react": "^18.3.1",
